--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:layout_width="150sp"
             android:layout_height="150sp"
-            android:src="@drawable/paper"></ImageView>
+            android:src="@drawable/paper"
+            android:id="@+id/userImage"></ImageView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         <ImageView
             android:layout_width="150sp"
             android:layout_height="150sp"
-            android:src="@drawable/paper"></ImageView>
+            android:src="@drawable/paper"
+            android:id="@+id/cpuImage"></ImageView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Eredmeny: Ember: 0 Computer: 0"
-            android:textSize="25sp"></TextView>
+            android:textSize="25sp"
+            android:id="@+id/scoreBoard"></TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,17 +52,20 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="KŐ"></Button>
+                android:text="KŐ"
+                android:id="@+id/btnRock"></Button>
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PAPíR"></Button>
+                android:text="PAPíR"
+                android:id="@+id/btnPaper"></Button>
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="OLLÓ"></Button>
+                android:text="OLLÓ"
+                android:id="@+id/btnScissor"></Button>
 
         </LinearLayout>
     </LinearLayout>
